Update tutorial screen to include guessing screen and change wording of incorrect guess

--- a/Entwined/Entwined/Base.lproj/Main.storyboard
+++ b/Entwined/Entwined/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="XuU-lz-VdQ">
                     <connections>
-                        <segue destination="1eJ-BT-ImY" kind="modal" modalPresentationStyle="fullScreen" id="3FB-jP-bX8"/>
+                        <segue destination="1eJ-BT-ImY" kind="modal" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="3FB-jP-bX8"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
