--- a/Entwined/Entwined/Game.storyboard
+++ b/Entwined/Entwined/Game.storyboard
@@ -20,56 +20,52 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CU1-Nn-eFO">
-                                <rect key="frame" x="-7" y="0.0" width="912" height="414"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HvB-3W-eMQ">
+                                <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
-                                <state key="normal" title="Button">
-                                    <color key="titleColor" red="0.086054392158985138" green="0.41069817543029785" blue="0.21969392895698547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
                                 <connections>
-                                    <action selector="clickMe:" destination="2n9-6J-4eN" eventType="touchUpInside" id="XaA-FN-OSM"/>
-                                    <segue destination="bkb-15-2Hx" kind="show" id="OAd-kF-S1v"/>
+                                    <segue destination="bkb-15-2Hx" kind="modal" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="qQk-Jj-JL0"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="QAO-Gv-uux"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="dTZ-vo-EX4" appends="YES" id="Jfe-44-YzZ"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="animationView" destination="8M9-iM-ufa" id="qpD-Dw-cWW"/>
+                        <segue destination="bkb-15-2Hx" kind="modal" identifier="Transition" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="pEz-zh-kOO"/>
+                        <segue destination="bkb-15-2Hx" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="ONF-xf-QNf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cB2-G5-1PT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="I1n-FZ-mYj">
-                    <connections>
-                        <outlet property="delegate" destination="CU1-Nn-eFO" id="2hy-eM-HIO"/>
-                    </connections>
-                </tapGestureRecognizer>
+                <tapGestureRecognizer id="dTZ-vo-EX4"/>
             </objects>
             <point key="canvasLocation" x="-500.22321428571428" y="108.69565217391305"/>
         </scene>
-        <!--CharadeCard-->
+        <!--Transition-->
         <scene sceneID="dRz-kW-aCX">
             <objects>
-                <viewController title="CharadeCard" id="bkb-15-2Hx" customClass="Game" customModule="Entwined" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Transition" id="bkb-15-2Hx" customClass="Game" customModule="Entwined" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dIu-QX-Jh9">
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iAh-a2-q0R">
-                                <rect key="frame" x="427" y="196.5" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="[game word]" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6r0-tj-qgd">
+                                <rect key="frame" x="393" y="190" width="110" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="iAh-a2-q0R" firstAttribute="centerY" secondItem="dIu-QX-Jh9" secondAttribute="centerY" id="Ian-tf-BNm"/>
-                            <constraint firstItem="iAh-a2-q0R" firstAttribute="centerX" secondItem="dIu-QX-Jh9" secondAttribute="centerX" id="su6-kL-PUR"/>
-                        </constraints>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="9bc-Bc-JNQ"/>
                     </view>
                     <navigationItem key="navigationItem" id="hQh-CH-Bh4"/>
@@ -79,5 +75,7 @@
             <point key="canvasLocation" x="271" y="110"/>
         </scene>
     </scenes>
-    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+    <inferredMetricsTieBreakers>
+        <segue reference="qQk-Jj-JL0"/>
+    </inferredMetricsTieBreakers>
 </document>
